# open-mcp-client

./: next.config.ts  package.json  pnpm-lock.yaml
agent/: langgraph.json  math_server.py  pyproject.toml
agent/orion_agent/: agent.py
agent/sample_agent/: agent.py
app/api/copilotkit/: route.ts
app/components/: ExampleConfigs.tsx  MCPConfigForm.tsx
