[project]
name = "mcp_agent"
version = "0.1.0"
description = "Starter"
authors = [
    { name = "Markus Ecker", email = "markus.ecker@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.11,<3.13"
dependencies = [
    "langchain-openai",
    "langchain-anthropic",
    "langchain",
    "openai",
    "langchain-community",
    "copilotkit",
    "uvicorn",
    "python-dotenv",
    "langchain-core",
    "langgraph-cli[inmem]",
    "langchain-mcp-adapters",
    "fastmcp",
    "langgraph",
    "langchain-google>=0.1.1",
    "langchain-google-genai>=4.2.1",
    "langgraph-api>=0.7.90",
]

[project.scripts]
demo = "mcp_agent.demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build_meta"

[tool.uv]
managed = true
package = false
